# transitlens-ml-core

./: .gitignore  ARCHITECTURE.md  CODEX.md  CONTRIBUTING.md  HANDOFF.md  README.md  TASKS.md  Transitlens-ml-core-plan.md  config.yaml  demo_a.json  pipeline.py  prepare_ml.py  promote_model.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  task.md  train_model.py  verify_fits.py
.github/workflows/: ci.yml
api/: app.py  middleware.py  routes.py  schema.py
backup_production_1782620898/: feature_schema.md  model_card.md  rule_config.yaml
backup_production_1782620898/pilot_invalid_20260627/: README.md  feature_scaler.pkl  rf_model.pkl
backup_production_1782620898/staging/: final_classifier.pkl  final_feature_scaler.pkl  final_label_mapping.json  training_metadata.json
backup_production_1782620956/: final_feature_scaler.pkl
backup_production_1782621187/: classification_report.json  model_card.md  rule_config.yaml
config/: phase2_diagnostics.yaml  phase3_training.yaml  threshold_registry.yaml
configs/: prototype.yaml
core/: __init__.py  alias_resolver.py  blend_features.py  bls_detector.py  claim_verification.py  classifier.py  cli.py  confidence.py  config_schema.py  denoise.py  detection_significance.py  exceptions.py  feature_extractor.py  leakage_checker.py  plotter.py  preprocess.py  run_manager.py  seeds.py  structured_logger.py  transit_fitter.py  transit_fitting_pipeline.py  uncertainty.py  utils.py
diagnostics/: __init__.py  centroid.py  contracts.py  crowding.py  difference_imaging.py  dilution.py  ephemeris_matching.py  evidence_aggregation.py  gaia_neighbors.py  harmonic_variability.py  morphology.py  multi_aperture.py  odd_even.py  phase_windows.py  plotting.py  quality.py  robust_statistics.py  secondary_eclipse.py  source_localization.py
eval/: benchmark.py  evaluate.py  evaluate_phase7.py  injection_config.yaml  injection_recovery.py  metrics.py  run_dataset_evaluation.py  run_full_evaluation.py  run_injection_recovery.py  run_sector_screening.py  run_smoke_test.py
eval/phase2/: cli.py  (+7 more)
ml/: __init__.py  calibration.py  checksums.py  cli.py  config.py  contracts.py  dataset.py  evaluation.py  fusion.py  inference.py  preprocessing.py  prototype.py  registry.py  reporting.py  tabular.py  timeseries.py  uncertainty.py
models/: baseline_feature_scaler.pkl  baseline_rf_model.pkl  feature_order.json  feature_scaler.pkl  final_classifier.pkl  final_feature_scaler.pkl  final_label_mapping.json  label_mapping.json  model_card.md  rf_model.pkl  rule_config.yaml  training_metadata.json  xgb_model.pkl
phase3_prototype/: active_model.json
scratch/: debug_alias.py
scripts/: install_tesscut_task.ps1  remove_tesscut_task.ps1  run_tesscut_worker.ps1
tests/: conftest.py  test_api.py  test_blend_features.py  test_bls.py  test_classifier.py  test_confidence.py  test_config.py  test_denoise_preservation.py  test_features.py  test_injection_recovery.py  test_mandatory_classifier.py  test_phase2_diagnostics.py  test_phase2_integrity.py  test_phase3_safety.py  test_phase7.py  test_pipeline.py  test_pipeline_real.py  test_plotter.py  test_preprocess.py  test_prototype_config.py  test_prototype_ml.py  test_reproducibility.py
(+204 files in other folders)
