[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "transitlens-ml-core"
version = "0.1.0"
description = "Machine-learning lifecycle for processed TransitLens light curves."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115,<1",
    "numpy>=1.26,<3",
    "onnx>=1.17,<2",
    "pydantic>=2.10,<3",
    "PyYAML>=6.0,<7",
    "scikit-learn>=1.5,<2",
    "scipy>=1.14,<2",
    "tensorboard>=2.18,<3",
    "torch>=2.5,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
tesscut = [
    "astropy>=7,<9",
    "astroquery>=0.4.11,<1",
]
dev = [
    "black>=24.10,<27",
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
    "pytest-cov>=6.0,<8",
    "ruff>=0.8,<1",
]

[project.scripts]
transitlens-tesscut-trainer = "transitlens_ml_core.tesscut_worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/transitlens_ml_core"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN201"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=transitlens_ml_core --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:starlette.exceptions.StarletteDeprecationWarning",
    "ignore:'asyncio.get_event_loop_policy' is deprecated.*:DeprecationWarning:pytest_asyncio.plugin",
]

[tool.coverage.run]
branch = true
omit = ["src/transitlens_ml_core/tesscut_worker.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]
